# research-buddy

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE.md  pyproject.toml
.claude/skills/github/: SKILL.md
.claude/skills/mutmut-report/: SKILL.md  analyze_mutmut.py
.claude/skills/session-end/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/starter/: docs.html
examples/starter/source/: document_v1.0.json
mutmut-report/: analyze_mutmut.py
schemas/: document.schema.json
scripts/: check_examples_sync.py  check_version_sync.py  sync_version.py
src/research_buddy/: __init__.py  build.py  build_md.py  bump.py  chrome.py  clean_md.py  cli.py  diff_summary.py  fileio.py  localize.py  main.py  migrate_v1_to_v2.py  sanitize_html.py  schema.json  starter.json  starter.md  table_layout.py  turn1.py  upgrade.py  upgrade_md.py  validator.py  validator_md.py
src/research_buddy/commands/: __init__.py  _shared.py  build.py  bump.py  clean.py  diff_summary.py  init.py  locate.py  migrate.py  turn1.py  upgrade.py  validate.py
src/research_buddy/css/: style.css
src/research_buddy/js/: script.js
src/research_buddy/lib/: highlight-theme.min.css
src/research_buddy/templates/: base.html.j2  blocks.html.j2  section.html.j2  starter.md
src/research_docs/: __init__.py  build.py  cli.py  main.py  schema.py  validator.py
src/research_docs/assets/: script.js  starter.json  style.css
starter-example/: starter-md.html  starter.html
status/: next-session.md  plan.md
tests/: conftest.py  test_build.py  test_build_md.py  test_bump.py  test_clean_md.py  test_cli.py  test_diff_summary.py  test_errors.py  test_fileio.py  test_localize.py  test_locate.py  test_main.py  test_main_coverage.py  test_migrate_v1_to_v2.py  test_rb_elements.py  test_reference_ordering.py  test_sanitize_html.py  test_schema.py  test_starter_hygiene.py  test_table_layout.py  test_table_layout_mutations.py  test_turn1.py  test_upgrade.py  test_upgrade_md.py  test_validator.py  test_validator_md.py  test_validator_mutations.py  test_validators.py  test_version_sync.py
versions/: v1.0.html
