[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-buddy"
version = "1.4.0"
description = "Structured AI research collaborator — generates high-fidelity HTML from versioned JSON research documents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "nuncaeslupus", email = "imarcos@gmail.com" }
]
keywords = ["documentation", "html-generator", "research", "single-file", "tabbed-docs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "jsonschema>=4.0.0",
    "watchdog>=3.0.0",
    "argcomplete>=3.0.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-jsonschema>=4.0.0",
    "types-PyYAML>=6.0",
    "twine>=4.0.0",
    "build>=1.0.0",
    "weasyprint>=60.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
research-buddy = "research_buddy.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_buddy = ["css/*", "js/*", "lib/*", "images/*", "templates/*", "*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".claude/", ".venv/", "tmp/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "B",   # flake8-bugbear (real bug patterns)
    "SIM", # flake8-simplify (cleaner equivalents)
    "PTH", # flake8-use-pathlib (prefer pathlib over os.path)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
exclude = ["tests/", ".claude/", "tmp/"]
mypy_path = ["src"]
